Fix sonar issues and enable analysis on master branch